<resources>
    <string name="Cancel">الغاء</string>
    <string name="Disclaimer_content">نحن لسنا مرتبطين بأي وسيلة مع محتوى الفيديو .هذا التطبيق يعمل كفهرس وقاعدة بيانات للأنمي الموجود بشكل علني على الانترنت. جميع الانميات والعلامات التجارية والشعارات والصور و الترجمة هي ملك لأصحابها الشرعيين.</string>
    <string name="Ok">حسنا</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add">اضافة</string>
    <string name="action_add_to_watched_history">تم مشتاهدتها</string>
    <string name="action_anime_contribution_dashboard">لوحة تحكم</string>
    <string name="action_blocked_accounts">الحسابات المحظورة</string>
    <string name="action_cancel">إلغاء</string>
    <string name="action_comment">التعليقات</string>
    <string name="action_delete">مسح</string>
    <string name="action_delete_all">مسح كل التنبيهات</string>
    <string name="action_delete_list">مسح القائمة</string>
    <string name="action_display_mode">تغيير شكل العرض</string>
    <string name="action_download">تنزيل</string>
    <string name="action_edit_list">تعديل القائمة</string>
    <string name="action_favourite">مفضلة</string>
    <string name="action_filter">فلتر</string>
    <string name="action_filter_empty">إزالة الفلتر</string>
    <string name="action_filter_fillers">فلر</string>
    <string name="action_filter_unfillers">اخفاء الفلر</string>
    <string name="action_filter_unwatched">لم يتم مشاهدتها</string>
    <string name="action_filter_watched">تمت مشاهدتها</string>
    <string name="action_install">تثبيت</string>
    <string name="action_logout">تسجيل الخروج</string>
    <string name="action_make_all_read">تحديد جميع التنبيهات كتم مشاهدتها</string>
    <string name="action_make_it_read">تم المشاهدة</string>
    <string name="action_my_recommends">توصياتي</string>
    <string name="action_next">الحلقة التالية</string>
    <string name="action_notification">تنبيه</string>
    <string name="action_prev">الحلقة السابقة</string>
    <string name="action_register">تسجيل</string>
    <string name="action_remove_from_watched_history">لم يتم مشاهدتها</string>
    <string name="action_retry">اعادة محاولة</string>
    <string name="action_save">حفظ</string>
    <string name="action_search">بحث</string>
    <string name="action_search_hint">أدخل اسم الانمي..</string>
    <string name="action_select_all">تأشير الكل</string>
    <string name="action_settings">الاعدادات</string>
    <string name="action_sign_in">تسجيل الدخول</string>
    <string name="action_sort">الترتيب حسب</string>
    <string name="action_sort_toggle">ترتيب</string>
    <string name="action_user_settings">اعدادات الحساب</string>
    <string name="action_webview_back">عودة</string>
    <string name="action_webview_forward">تقدم</string>
    <string name="action_webview_refresh">تحديث</string>
    <string name="action_words_blocking_copy">نسخ الكل</string>
    <string name="action_words_blocking_remove_all">مسح الكل</string>
    <string name="add_to_customlist">اضافة الى القائمة المخصصة</string>
    <string name="added_to_customlist">تمت الاضافة الى القائمة</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anime_comment_disabled">التعليقات لهذا الانمي متوقفة مؤقتا</string>
    <string name="anime_news_notification">التنبيه بنزول اخبار الانمي</string>
    <string name="app_name">Anime Slayer</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">تطبيق</string>
    <string name="archive_fall">خريف</string>
    <string name="archive_spring">ربيع</string>
    <string name="archive_summer">صيف</string>
    <string name="archive_winter">شتاء</string>
    <string name="auth_use_email">تسجيل الدخول/ تسجيل لأول مرة باستخدام البريد الالكتروني</string>
    <string name="available_quality">الجودات المتوفرة</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="battery_optimization_note">ملاحظه : يرجى اعطاء صلاحية عمل التحميل في الخلفية لكي يستمر التحميل عند الخروج من التطبيق</string>
    <string name="birthday_not_today_month_day_year">تاريخ الميلاد %s</string>
    <string name="birthday_picker_header_title">اختيار تاريخ الميلاد</string>
    <string name="block">حظر</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bullet">•</string>
    <string name="change_passowrd">تغيير كلمة المرور</string>
    <string name="changelog">ما الجديد</string>
    <string name="changelog_header_version">"Version "</string>
    <string name="changelog_internal_error_internet_connection">No internet connection to fetch the changelog</string>
    <string name="changelog_internal_error_parsing">Error while parsing file</string>
    <string name="changelog_row_bulletpoint">•</string>
    <string name="changelog_row_prefix_bug">[b]Bug:[/b]</string>
    <string name="changelog_row_prefix_improvement">[b]New:[/b]</string>
    <string name="channel_common">Common</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_internet">تأكد من اتصالك بالانترنت</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">708c302ed0c04a08b85d6aed063865fc</string>
    <string name="comment_content_warning">قد تحتوي التعليقات على محتوى يشمل الإساءة أو الانتقاد اللاذع أو الحرق، هل ترغب في الاستمرار؟</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="create_customlist_add_list">انشاء قائمة</string>
    <string name="create_customlist_description">وصف القائمة</string>
    <string name="create_customlist_description_hint">(اختياري)</string>
    <string name="create_customlist_name">اسم القائمة</string>
    <string name="create_customlist_name_hint">قائمة جديدة</string>
    <string name="forgot_your_password">نسيت كلمة المرور؟</string>
    <string name="media_state_completed">مكتمل</string>
    <string name="media_state_not_yet_aired">لم يتم بثه</string>
    <string name="media_state_ongoing">مستمر</string>
    <string name="media_type_movie">فلم</string>
    <string name="media_type_ona">اونا</string>
    <string name="media_type_ova">اوفا</string>
    <string name="media_type_special">خاصة</string>
    <string name="media_type_tv">مسلسل</string>
    <string name="nav_anime_list">لائحة الانمي</string>
    <string name="nav_custom_list">القائمة المخصصة</string>
    <string name="nav_fav_characters_title">شخصياتي المفضلة</string>
    <string name="nav_header_as_ranking">التقييم العربي</string>
    <string name="nav_header_mal_ranking">التقييم العالمي</string>
    <string name="nav_header_manage">قائمتي</string>
    <string name="nav_latest_episodes">اخر التحديثات</string>
    <string name="nav_my_downloads">تحميلاتي</string>
    <string name="nav_my_favourites">أنمياتي المفضلة</string>
    <string name="nav_my_history">اخر المشاهدات</string>
    <string name="nav_recommendations">التوصيات</string>
    <string name="nav_schedule">مواعيد نزول الحلقات</string>
    <string name="nav_season_title">المواسم</string>
    <string name="nav_settings">الاعدادات</string>
    <string name="nav_top_characters_title">الشخصيات الاكثر شعبية</string>
    <string name="prompt_current_password">كلمة المرور الحالية</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="prompt_password_confirm">تأكيد كلمة المرور</string>
    <string name="prompt_username">البريد الالكتروني</string>
    <string name="resend_activation_email">اعادة ارسال رمز التفعيل</string>
</resources>