<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/nav_main_group" android:checkableBehavior="single">
        <item android:icon="@drawable/fire" android:id="@id/nav_latest_episodes" android:title="@string/nav_latest_episodes" />
        <item android:icon="@drawable/ic_list_grey_600_24dp" android:id="@id/nav_anime_list" android:title="@string/nav_anime_list" />
        <item android:icon="@drawable/ic_baseline_date_range_24" android:id="@id/nav_anime_season" android:title="@string/nav_season_title" />
    </group>
    <group android:id="@id/nav_rating_group" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_assessment_grey_600_24dp" android:id="@id/nav_mal_ranking" android:title="@string/nav_header_mal_ranking" />
        <item android:icon="@drawable/ic_assessment_grey_600_24dp" android:id="@id/nav_as_ranking" android:title="@string/nav_header_as_ranking" />
    </group>
    <group android:id="@id/nav_user_group" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_assessment_grey_600_24dp" android:id="@id/nav_my_list" android:title="@string/nav_header_manage" />
        <item android:icon="@drawable/ic_assessment_grey_600_24dp" android:id="@id/nav_custom_list" android:title="@string/nav_custom_list" />
        <item android:icon="@drawable/ic_bx_heart" android:id="@id/nav_my_favourites" android:title="@string/nav_my_favourites" />
        <item android:icon="@drawable/ic_bx_heart" android:id="@id/nav_fav_characters" android:title="@string/nav_fav_characters_title" />
        <item android:icon="@drawable/ic_access_time_grey_600_24dp" android:id="@id/nav_my_history" android:title="@string/nav_my_history" />
        <item android:icon="@drawable/ic_file_download_grey_600_24dp" android:id="@id/nav_my_downloads" android:title="@string/nav_my_downloads" />
    </group>
    <group android:id="@id/nav_others_group" android:checkableBehavior="single">
        <item android:icon="@drawable/signal_cellular_3" android:id="@id/nav_top_characters" android:title="@string/nav_top_characters_title" />
        <item android:icon="@drawable/ic_extension_grey_600_24dp" android:id="@id/nav_recommendations" android:title="@string/nav_recommendations" />
        <item android:icon="@drawable/ic_date_range_grey_600_24dp" android:id="@id/nav_schedule" android:title="@string/nav_schedule" />
    </group>
    <item android:icon="@drawable/ic_settings_grey_600_24dp" android:id="@id/nav_settings" android:title="@string/nav_settings" />
</menu>
