<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/log_out_profile" android:id="@id/action_logout" android:title="@string/action_logout" app:showAsAction="ifRoom" />
    <item android:id="@id/action_blocked_accounts" android:title="@string/action_blocked_accounts" app:showAsAction="never" />
    <item android:id="@id/action_my_recommends" android:title="@string/action_my_recommends" app:showAsAction="never" />
    <item android:id="@id/action_user_settings" android:title="@string/action_user_settings" app:showAsAction="never" />
    <item android:id="@id/action_anime_contribution_dashboard" android:title="@string/action_anime_contribution_dashboard" app:showAsAction="never" />
</menu>
