<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_filter_list_grey_600_24dp" android:id="@id/action_sort" android:visible="false" android:orderInCategory="100" android:title="@string/action_sort" app:iconTint="?iconColor" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_bxl_filter" android:id="@id/action_filter" android:visible="false" android:orderInCategory="101" android:title="@string/action_filter" app:iconTint="?iconColor" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_add_grey_600_24dp" android:id="@id/action_add" android:visible="false" android:orderInCategory="102" android:title="@string/action_add" app:iconTint="?iconColor" app:showAsAction="ifRoom" />
</menu>
