<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_grey_600_24dp" android:id="@id/action_search" android:orderInCategory="100" android:title="@string/action_search" app:iconTint="?iconColor" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_view_module_white_24dp" android:id="@id/action_display_mode" android:orderInCategory="101" android:title="@string/action_display_mode" app:iconTint="?iconColor" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_info_outline_grey_600_24dp" android:id="@id/action_notification" android:visible="false" android:orderInCategory="103" android:title="@string/action_notification" app:showAsAction="ifRoom" />
    <item android:id="@id/action_rate_system" android:visible="false" android:orderInCategory="104" android:title="نظام التقييم" app:showAsAction="never" />
</menu>
