<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:background="?android:colorBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="0.0dip">
        <androidx.appcompat.widget.Toolbar android:background="?android:colorBackground" android:layout_width="fill_parent" android:layout_height="46.0dip" app:contentInsetEnd="0.0dip" app:contentInsetStart="0.0dip" app:layout_scrollFlags="scroll|enterAlways|snap">
            <HorizontalScrollView android:id="@id/horizontal_scroll" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/filterLayout" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.material.chip.ChipGroup android:theme="@style/ThemeOverlay.SecondaryOverPrimary" android:id="@id/types_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="8.0dip" app:singleLine="true" app:singleSelection="true">
                        <com.google.android.material.chip.Chip android:id="@id/chip_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_type_tv" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_ona" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_type_ona" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_ova" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_type_ova" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_movie" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_type_movie" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_special" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_type_special" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                    </com.google.android.material.chip.ChipGroup>
                    <View android:layout_gravity="center" android:id="@id/separator1" android:background="?abstractColorDivider" android:layout_width="1.0dip" android:layout_height="24.0dip" />
                    <com.google.android.material.chip.ChipGroup android:theme="@style/ThemeOverlay.SecondaryOverPrimary" android:id="@id/state_group" android:clipToPadding="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:paddingStart="10.0dip" android:paddingEnd="8.0dip" app:singleLine="true" app:singleSelection="true">
                        <com.google.android.material.chip.Chip android:id="@id/chip_ongoing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_state_ongoing" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_completed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_state_completed" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                        <com.google.android.material.chip.Chip android:id="@id/chip_not_yet_aired" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_state_not_yet_aired" app:chipCornerRadius="30.0dip" style="?chipChoiceStyle" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipe_refresh" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/catalogue_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ProgressBar android:layout_gravity="center" android:id="@id/progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.anslayer.widget.ErrorView android:layout_gravity="center" android:id="@id/error_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
