<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/xl_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatEditText android:layout_gravity="center" android:id="@id/current_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_current_password" android:inputType="textPassword" />
    <Space android:layout_width="wrap_content" android:layout_height="@dimen/xl_margin" />
    <androidx.appcompat.widget.AppCompatEditText android:layout_gravity="center" android:id="@id/new_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:inputType="textPassword" />
    <Space android:layout_width="wrap_content" android:layout_height="@dimen/xl_margin" />
    <androidx.appcompat.widget.AppCompatEditText android:layout_gravity="center" android:id="@id/new_password_confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password_confirm" android:inputType="textPassword" />
</LinearLayout>
