<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView android:id="@id/list_name_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/create_customlist_name" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/app_bar" style="@style/TextAppearance.Medium.Title" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/list_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:counterEnabled="true" app:counterMaxLength="50" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/list_name_header" style="@style/Widget.Design.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/create_customlist_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@id/list_description_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/create_customlist_description" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/list_name" style="@style/TextAppearance.Medium.Title" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/list_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:counterEnabled="true" app:counterMaxLength="50" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/list_description_header" style="@style/Widget.Design.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/create_customlist_description_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton android:id="@id/add_list" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:minWidth="100.0dip" android:text="@string/create_customlist_add_list" app:cornerRadius="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Theme.Widget.Button.FilledAccent" />
</androidx.constraintlayout.widget.ConstraintLayout>
