<?xml version="1.0" encoding="utf-8"?>
<com.nguyenhoanglam.progresslayout.ProgressLayout android:id="@id/stateLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:errorButtonTextColor="?colorAccent" app:loadingProgressBarColor="?colorAccent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.textfield.TextInputLayout android:layout_gravity="center" android:id="@id/username_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:startIconDrawable="@drawable/ic_person_outline_grey_600_24dp">
                <androidx.appcompat.widget.AppCompatEditText android:layout_gravity="center" android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_username" android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_gravity="center" android:id="@id/password_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:endIconMode="password_toggle" app:startIconDrawable="@drawable/ic_security_grey_600_24dp">
                <androidx.appcompat.widget.AppCompatEditText android:layout_gravity="center" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton android:textSize="16.0sp" android:id="@id/action_sign_in" android:padding="@dimen/xl_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/xl_margin" android:text="@string/action_sign_in" style="@style/Theme.Widget.Button.FilledAccent" />
            <Space android:layout_width="fill_parent" android:layout_height="@dimen/lg_margin" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/colorAccentLight" android:gravity="center" android:id="@id/action_forgot_password" android:padding="@dimen/lg_margin" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/forgot_your_password" />
            <Space android:layout_width="fill_parent" android:layout_height="@dimen/lg_margin" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/colorAccentLight" android:gravity="center" android:id="@id/action_resend_activation" android:padding="@dimen/lg_margin" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/resend_activation_email" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</com.nguyenhoanglam.progresslayout.ProgressLayout>
